# imu-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
ahrs-rs/: Cargo.toml
ahrs-rs/examples/: track_example.rs
ahrs-rs/src/: ahrs_filter.rs  lib.rs  utils.rs
ahrs-rs/src/ahrs/: buffer.rs  mod.rs  sink.rs  source.rs
ahrs-rs/tests/: test_service.rs
common/: Cargo.toml
common/src/: constants.rs  lib.rs
common/src/traits/: imu.rs  mod.rs  publisher.rs
common/src/types/: buffers.rs  callback.rs  clock.rs  mod.rs  sample.rs  sample3D.rs  sample_3d.rs  sample_quaternion.rs  sensor.rs  sensor_readings.rs  sensor_tag.rs  sensor_type.rs  xyz.rs
common/src/types/buffers/: circular_buffer.rs  circular_reader.rs  mod.rs  rolling_buffer.rs
common/src/types/filters/: average.rs  mod.rs  moving_average.rs  weighted_average.rs  weighted_moving_average.rs
common/src/types/sensors/: sensor_readings.rs  sensor_type.rs
common/src/types/timed/: sample_3d.rs  sample_quaternion.rs  sample_scalar.rs
common/src/types/untimed/: mod.rs  scalar.rs  unit_quaternion.rs  xyz.rs
imu-common/: Cargo.toml
imu-common/src/types/: callback.rs  clock.rs
imu-common/src/types/buffers/: circular_buffer.rs  circular_reader.rs
imu-common/src/types/filters/: average.rs  moving_average.rs  weighted_average.rs
imu-common/src/types/sensors/: mod.rs  sensor_readings.rs  sensor_type.rs
imu-common/src/types/timed/: mod.rs  sample_3d.rs  sample_quaternion.rs  sample_scalar.rs
imu-common/src/types/untimed/: scalar.rs  unit_quaternion.rs  xyz.rs
phyphox-rs/: Cargo.toml  README.md
phyphox-rs/examples/: plot_example.rs  plot_raw.rs
phyphox-rs/src/: buffer.rs  constants.rs  errors.rs  filter.rs  helpers.rs  http_client.rs  lib.rs  phyphox_client.rs  ports.rs  services.rs
phyphox-rs/src/adapters/: mock.rs  mod.rs  production.rs
phyphox-rs/src/adapters/mock/: gaussian.rs  mini.rs  mod.rs  timestamp.rs
phyphox-rs/src/models/: errors.rs  filter.rs  http_client.rs  mod.rs  shutdown.rs
phyphox-rs/src/phyphox_client/: ports.rs  services.rs
phyphox-rs/src/phyphox_client/adapters/: mock.rs  production.rs
phyphox-rs/tests/: test_service.rs
publisher/: Cargo.toml  README.md
publisher/src/: lib.rs  listener.rs  macros.rs  publisher.rs  publisher_manager.rs
resampler/: Cargo.toml
resampler/examples/: plot_resampled.rs
resampler/src/: buffer.rs  lib.rs  resampler.rs  resampler_test_code.rs  utils.rs
resampler/src/pipeline/: cache.rs  interpolator.rs  mod.rs  resampler.rs  sink.rs  source.rs
resampler/src/resampler/: mod.rs  sink.rs  source.rs
resampler/src/utils/: average.rs  clone_and_clear.rs  collect_samples.rs  resample.rs
resampler/tests/: test_service.rs
test-utils/: Cargo.toml
test-utils/src/: csv_loader.rs  lib.rs  sink_mock.rs
test-utils/src/renderable/: box3d.rs  mod.rs
test-utils/src/sinks/: mod.rs  plot1d.rs  plot3d.rs  sink_mock.rs
test-utils/test_data/: fused_quaternion.csv  sensor_readings.csv
