[package]
name = "ahrs_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ahrs = "0.7.0"
simba = "0.9.0"

common = { path = "../common"}
publisher = { path = "../publisher"}


nalgebra.workspace = true
tokio.workspace = true
uuid.workspace = true
dashmap.workspace = true
async-trait.workspace = true

[dev-dependencies]
test_utils = {path = "../test-utils"}
resampler_rs = {path = "../resampler"}
phyphox_rs = {path = "../phyphox-rs"}