[package]
name = "phyphox_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
uuid.workspace = true
async-trait.workspace = true

reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
rand = "0.8"
rand_distr = "0.4"

publisher = { path = "../publisher"}
common = { path = "../common"}
test_utils = {path = "../test-utils"}

[dev-dependencies]
wiremock = {version = "0.5"}
once_cell = "1.18"
